# cob_environment_perception

cob_3d_experience_mapping/: CMakeLists.txt  package.xml
cob_3d_experience_mapping/action/: SetGoal.action
cob_3d_experience_mapping/common/include/cob_3d_experience_mapping/: mapping.h  param.h
cob_3d_experience_mapping/common/include/cob_3d_experience_mapping/algo/: context.h  context_cloud.h  path_integration.hpp  shortest_path.hpp
cob_3d_experience_mapping/common/include/cob_3d_experience_mapping/helpers/: log.h  network.h
cob_3d_experience_mapping/common/include/cob_3d_experience_mapping/types/: general.h  transformation.h
cob_3d_experience_mapping/common/include/cob_3d_experience_mapping/visualization/: graph.hpp
cob_3d_experience_mapping/evaluation/: eval_result.py  exp_mapping_lemon_eval.cpp
cob_3d_experience_mapping/include/: ros_node.hpp
cob_3d_experience_mapping/launch/: irat.launch  sim_stdr.launch  sim_stdr_server.launch
cob_3d_experience_mapping/libs/particleplusplus/: observefn.h  pfilter.h  proposal.h  ran_generator.h  resampler.h  sampler.h  statefn.h
cob_3d_experience_mapping/simulation/: sim_features.py  simulation.launch
cob_3d_experience_mapping/src/: server.cpp  unit_tests.cpp
cob_3d_experience_mapping/srv/: QueryPath.srv
cob_3d_experience_mapping/test_env/: context.py  feature.py  hypo.py  node.py  state.py  transition.py
cob_3d_experience_mapping/tools/: costmap.launch  costmap.yaml  costmap2.launch  global_path_planning.cpp  local_path_planning.cpp  path_gtest.cpp  path_probability.h  scan2feature.cpp
cob_3d_feature_map/: CMakeLists.txt  mainpage.dox  manifest.xml  test.pgm
cob_3d_feature_map/common/include/cob_3d_feature_map/: cluster.h  context.h  correspondence.h  descriptor.h  feature.h  ft_map.h  haar.h  id.h  instance.h  relation.h  representation.h  simplified.h
cob_3d_feature_map/common/include/cob_3d_feature_map/impl/: relation.hpp
cob_3d_feature_map/common/include/cob_3d_feature_map/libkdtree/kdtree++/: back_insert_iterator2.hpp  iterator.hpp  kdtree.hpp  node.hpp
cob_3d_feature_map/common/include/cob_3d_feature_map/tools/: pgm_loader.h
cob_3d_feature_map/common/src/: pgm_loader.cpp
cob_3d_feature_map/ros/src/: map_2d.cpp
cob_3d_feature_map/ros/test/: test_2d_map.cpp  test_kdtree.cpp
cob_3d_mapping_common/common/include/cob_3d_mapping_common/: stop_watch.h
cob_3d_mapping_geometry_map_v2/: CMakeLists.txt
cob_3d_mapping_geometry_map_v2/common/include/cob_3d_mapping_geometry_map_v2/registration/: registration.h
cob_3d_mapping_geometry_map_v2/common/include/cob_3d_mapping_geometry_map_v2/types/: context.h  object.h
cob_3d_mapping_geometry_map_v2/common/src/: classifier.cpp  context.cpp  registration.cpp
cob_3d_mapping_geometry_map_v2/ros/include/: mapping_node.h
cob_3d_mapping_msgs/: manifest.xml
cob_3d_segmentation/: CMakeLists.txt  package.xml
cob_3d_visualization/: manifest.xml
cob_3d_visualization/include/cob_3d_visualization/: simple_marker.h
cob_3d_visualization/ros/webtools/: index.html
cob_3d_visualization/src/: shape_marker.cpp
